--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - images/bmi.jpg
+  #   - images/weightstatus.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -84,6 +85,14 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+#   dev_dependencies:
+#   flutter_launcher_icons: ^0.9.2
+
+# flutter_icons:
+#   android: true
+#   ios: true
+#   image_path: "../myapp/images/bmi.jpg"
